--- a/Immortal/Assembly-CSharp.csproj
+++ b/Immortal/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\Scripts\Enemy\BounceBullet.cs" />
     <Compile Include="Assets\Scripts\Enemy\Enemy2.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyBullet.cs" />
+    <Compile Include="Assets\Scripts\Enemy\LineRen.cs" />
     <Compile Include="Assets\Scripts\Enemy\NavRun.cs" />
     <Compile Include="Assets\Scripts\Enemy\Trip1.cs" />
     <Compile Include="Assets\Scripts\FirstPerson.cs" />
@@ -90,10 +91,10 @@
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\Scripts\ThridPerson.cs" />
     <Reference Include="UnityEditor.StandardEvents">
-      <HintPath>E:/QQ浏览器/网页/大物下PPT/Immortal/Immortal/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/10099.000/Desktop/Immortal/Immortal/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>E:/QQ浏览器/网页/大物下PPT/Immortal/Immortal/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>C:/Users/10099.000/Desktop/Immortal/Immortal/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>E:/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -291,7 +292,7 @@
       <HintPath>E:/Unity/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="LitJson">
-      <HintPath>E:/QQ浏览器/网页/大物下PPT/Immortal/Immortal/Assets/Plugins/LitJson.dll</HintPath>
+      <HintPath>C:/Users/10099.000/Desktop/Immortal/Immortal/Assets/Plugins/LitJson.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Analytics">
       <HintPath>C:/Users/10099.000/AppData/Local/Unity/cache/packages/packages.unity.com/com.unity.analytics@2.0.16/UnityEngine.Analytics.dll</HintPath>
